Fix Render deployment configuration
- Update render.yaml with explicit web service type
- Add proper buildCommand and startCommand
- Set nodeVersion to 18
- Add NODE_ENV environment variable
- Update package.json main field to server.js
- Add engines field for Node.js version requirement

--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "hay-fever-management",
   "version": "1.0.0",
   "description": "Hay Fever Management Website - Vue Version",
-  "main": "index.js",
+  "main": "server.js",
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
