--- a/render.yaml
+++ b/render.yaml
@@ -1,14 +1,24 @@
 # Render deployment configuration
 # Render部署配置
 
+# Service type
+# 服务类型
+type: web
+
 # Build command
 # 构建命令
-npm run build
+buildCommand: npm run build
 
 # Start command  
 # 启动命令
-npm start
+startCommand: npm start
 
 # Node.js version
 # Node.js版本
-node-version: 18
+nodeVersion: 18
+
+# Environment
+# 环境变量
+envVars:
+  - key: NODE_ENV
+    value: production
