--- a/package.json
+++ b/package.json
@@ -16,10 +16,7 @@
   "dependencies": {
     "vue": "^3.3.4",
     "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "multer": "^2.0.0-rc.4",
-    "node-fetch": "^2.7.0",
-    "form-data": "^4.0.0"
+    "cors": "^2.8.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
