--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "vue": "^3.3.4",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "cors": "^2.8.5"
+    "http-proxy-middleware": "^3.0.5",
+    "vue": "^3.3.4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
