--- a/render.yaml
+++ b/render.yaml
@@ -22,3 +22,9 @@ nodeVersion: 18
 envVars:
   - key: NODE_ENV
     value: production
+  - key: PORT
+    value: 10000
+  - key: VITE_GOOGLE_MAPS_API_KEY
+    value: your_google_maps_api_key_here
+  - key: VITE_API_BASE_URL
+    value: http://3.106.197.188:8080
