--- a/render.yaml
+++ b/render.yaml
@@ -7,7 +7,7 @@ type: web
 
 # Build command
 # 构建命令
-buildCommand: npm run build
+buildCommand: npm install && npm run build
 
 # Start command  
 # 启动命令
