--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "http-proxy-middleware": "^3.0.5",
-    "vue": "^3.3.4"
-  },
-  "devDependencies": {
+    "vue": "^3.3.4",
     "@vitejs/plugin-vue": "^4.2.3",
     "vite": "^4.4.5"
+  },
+  "devDependencies": {
   },
   "keywords": [
     "vue",
